# python-project-template

./: .bandit  .editorconfig  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements-test.in  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox-pip-install.py  tox.ini  tox_pip_install.py
.githooks/pre-commit/: 20-ruff.sh
.github/: dependabot.yml
.github/workflows/: prerelease.yml  python-package-tox.yml  release.yml  tox.yml  zizmor.yml
.vulture/whitelists/: setup_whitelist.py
docs/: cli.rst  conf.py  index.rst
modulename/: __init__.py  __main__.py
packagename/: __init__.py  __main__.py  cli.py
requirements/: dev.in  dev.txt  docs.in  docs.txt  install.in  install.txt  test.in  test.txt
src/packagename/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_argcomplete.py  test_cli.py
