# Setuputils package metadata file
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = python-project-template
# Human "friendly" project name for sphinx and other non-setup uses
friendly_name = Python Project Template
version = attr: packagename.__version__
description = Short description of this package and its purpose.
long_description = file: README.rst
# Note: license is only needed for deviations/exceptions to License classifier
# https://packaging.python.org/guides/distributing-packages-using-setuptools/?highlight=keywords#license
# Is also printed by `./setup.py --license`.  Match classifier where possible.
license = CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
license_file = LICENSE.txt
author = Kevin Locke
author_email = kevin@kevinlocke.name
# Copyright statement for sphinx and other non-setup uses
copyright = Copyright 2019 Kevin Locke <kevin@kevinlocke.name>
url = https://github.com/kevinoid/python-project-template
# Project URLs for specific purposes
# https://packaging.python.org/guides/distributing-packages-using-setuptools/?highlight=keywords#project-urls
project_urls =
    Source = https://github.com/kevinoid/python-project-template
    Tracker = https://github.com/kevinoid/python-project-template/issues
# From PyPI classifiers list: https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development
# (Optional) Additional keywords used to assist searching.
keywords = sample setuptools development

[options]
zip_safe = True
include_package_data = True
package_dir =
    = src
packages = find:
# Generate a CLI script for a named entry point
console_scripts =
    packagename = packagename:main
# Note: install_requires and tests_require from requirements*.in by setup.py

[options.packages.find]
exclude =
    tests
where = src

[bdist_wheel]
universal = true

[aliases]
test = pytest

# Additional data files to include in the package
# https://setuptools.readthedocs.io/en/latest/setuptools.html#including-data-files
[options.package_data]
packagename = *.dat

[coverage:run]
branch = True
omit =
    docs/*
    setup.py
    tests/*
    .tox/*
    .venv/*
    .vulture/*

[flake8]
exclude =
    *.egg,
    .eggs,
    .git,
    .tox,
    .venv,
    .vulture,
    __pycache__,
    dist,
ignore =
    # Unknown interpreted text role
    # Enable after https://github.com/peterjc/flake8-rst-docstrings/issues/7 fix
    RST304,
    # Line break before binary operator
    W503,
max-line-length = 80
per-file-ignores =
    docs/conf.py:E800

[isort]
# __init__.py is ignored by default.  Un-ignore it.
# See https://github.com/timothycrosley/isort/issues/690
not_skip = __init__.py

[pycodestyle]
max_line_length = 80

[pydocstyle]
# Configuration when using the pydocstyle tool.
# Several errors are ignored by default pep257 convention:
# https://github.com/PyCQA/pydocstyle/blob/3.0.0/src/pydocstyle/violations.py#L242-L244
add_select = D
add_ignore = D203,D212

[tool:pytest]
addopts = --cov=packagename

# vim: set ft=dosini :
